--- a/app/Makefile
+++ b/app/Makefile
@@ -15,14 +15,15 @@ OBJCOPY  = sdobjcopy
 CFLAGS   = -m$(ARCH) -p$(MCU) --std-sdcc11
 CFLAGS  += -DF_CPU=$(F_CPU)UL -I. -I$(LIBDIR)
 CFLAGS  += --stack-auto --noinduction --use-non-free --opt-code-size
-LDFLAGS  = -m$(ARCH) -l$(ARCH) --out-fmt-ihx --code-loc 0x8380
-#--code-loc 0x8400
+LDFLAGS  = -m$(ARCH) -l$(ARCH) --out-fmt-ihx
+LDFLAGS += --code-loc 0x8380
+#LDFLAGS += --code-loc 0x8400
 
 all: $(TARGET)
 
 $(TARGET): $(OBJS)
 	$(CC) $(LDFLAGS) $(OBJS) -o $@
-	$(OBJCOPY) -I ihex --output-target=binary $(TARGET) firmware.bin
+	@$(OBJCOPY) -I ihex --output-target=binary $(TARGET) firmware.bin
 
 %.rel: %.c
 	$(CC) $(CFLAGS) $(INCLUDE) -c $< -o $@
