changed boot address

--- a/app/Makefile
+++ b/app/Makefile
@@ -12,12 +12,12 @@ OBJS     = $(SRCS:.c=.rel)
 CC       = sdcc
 LD       = sdld
 OBJCOPY  = sdobjcopy
-CFLAGS   = -m$(ARCH) -p$(MCU) --std-sdcc11
+CFLAGS   = -m$(ARCH) -p$(MCU)
 CFLAGS  += -DF_CPU=$(F_CPU)UL -I. -I$(LIBDIR)
 CFLAGS  += --stack-auto --noinduction --use-non-free
 LDFLAGS  = -m$(ARCH) -l$(ARCH) --out-fmt-ihx
-#LDFLAGS += --code-loc 0x8380
-LDFLAGS += --code-loc 0x8400
+#LDFLAGS += --code-loc 0x8260
+LDFLAGS += --code-loc 0x8280
 
 all: $(TARGET)
 
@@ -27,9 +27,6 @@ $(TARGET): $(OBJS)
 
 %.rel: %.c
 	$(CC) $(CFLAGS) -c $< -o $@
-
-flash: $(TARGET)
-	stm8flash -c stlinkv2 -p $(MCU) -w $(TARGET)
 
 clean:
 	rm -f *.map *.asm *.rel *.ihx *.o *.sym *.lk *.lst *.rst *.cdb *.bin
