--- a/app/Makefile
+++ b/app/Makefile
@@ -16,7 +16,9 @@ CFLAGS   = -m$(ARCH) -p$(MCU)
 CFLAGS  += -DF_CPU=$(F_CPU)UL -I. -I$(LIBDIR)
 CFLAGS  += --stack-auto --noinduction --use-non-free
 LDFLAGS  = -m$(ARCH) -l$(ARCH) --out-fmt-ihx
-#LDFLAGS += --code-loc 0x8260
+## RELOCATE_IVT set to 0:
+#LDFLAGS += --code-loc 0x8200
+## RELOCATE_IVT set to 1:
 LDFLAGS += --code-loc 0x8280
 
 all: $(TARGET)
